# tradespec

./: .gitignore  README.md  USER_GUIDE.md  package-lock.json  package.json
apps/api/: .env.example  README.md  pyproject.toml  tradespec.db
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: __init__.py  active_trades.py  evaluations.py  health.py  journal.py  market_snapshot.py  position_sizing.py  trade_specs.py  trade_validation.py
apps/api/app/core/: config.py  dependencies.py
apps/api/app/domain/: __init__.py  glossary.py
apps/api/app/domain/active_trades/: __init__.py  config.py  models.py  repository.py  service.py
apps/api/app/domain/ai_services/: __init__.py  service.py
apps/api/app/domain/evaluations/: __init__.py  models.py  service.py
apps/api/app/domain/journal/: __init__.py  models.py  repository.py  service.py
apps/api/app/domain/market_data/: __init__.py  config.py  errors.py  models.py  normalizer.py  service.py  yahoo_adapter.py
apps/api/app/domain/position_sizing/: config.py  models.py  (+1 more)
apps/api/app/persistence/: __init__.py  models.py
apps/api/tests/: test_active_trade_api.py  test_active_trade_stabilizer.py  test_api_contracts.py  test_config.py  test_domain_models.py  test_evaluate_ticker_route.py  test_health.py  test_journal_ai.py  test_journal_patterns.py  test_market_data.py  test_market_data_adapter.py  test_market_data_normalizer.py  test_market_data_route.py  test_position_sizing.py  test_position_sizing_api.py  test_rule_engine.py  test_trade_api_flow.py  test_trade_builder.py
(+21 files in other folders)
